# Terraria-World-Parser

./: .gitignore  CMakeLists.txt  Package.resolved  Package.swift  README.md
.swiftpm/xcode/package.xcworkspace/xcuserdata/Xenoxiluna1.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/xcuserdata/Xenoxiluna1.xcuserdatad/xcschemes/: xcschememanagement.plist
Binaries/: TWPRun.exp  TWPRun.lib
Sources/: CMakeLists.txt
Sources/SwiftyBytes/: CMakeLists.txt
Sources/TWPRun/: CMakeLists.txt  main.swift
Sources/TerrariaWorldParser/: CMakeLists.txt  WorldFile.swift  example.swift
Sources/TerrariaWorldParser/Data/: Bestiary.swift  CMakeLists.txt  Chest.swift  Item.swift  NPC.swift  PressurePlate.swift  Sign.swift  Tile.swift  TileEntity.swift  TownManager.swift
Sources/TerrariaWorldParser/Data/Types/: BrickStyle.swift  CreativePower.swift  FileType.swift  LiquidType.swift  TileType.swift
Sources/TerrariaWorldParser/Exceptions/: ParseError.swift
Sources/TerrariaWorldParser/Extensions/: BinarySwiftExtensions.swift
Tests/: CMakeLists.txt  LinuxMain.swift
Tests/TerrariaWorldParserTests/: 230.wld  CMakeLists.txt  TerrariaWorldParserTests.swift  XCTestManifests.swift
Tests/TerrariaWorldParserTests/WorldFiles/: 194-t3.wld
